remove eslint cra config and update json5 dependencies to fix CVE-2022-46175

--- a/rekisterointi/rekisterointi-ui/package.json
+++ b/rekisterointi/rekisterointi-ui/package.json
@@ -20,7 +20,7 @@
         "react-redux": "^8.0.2",
         "react-router": "^6.3.0",
         "react-router-dom": "^6.3.0",
-        "react-select": "^5.4.0",
+        "react-select": "^5.7.0",
         "redux": "^4.2.0",
         "universal-cookie": "^4.0.4",
         "yup": "^0.32.11"
@@ -32,14 +32,10 @@
         "@types/react-dom": "^18.0.6",
         "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.7.1",
-        "eslint": "^8.22.0",
-        "eslint-config-react-app": "^7.0.1",
         "fork-ts-checker-webpack-plugin": "^7.2.13",
         "html-webpack-plugin": "^5.5.0",
-        "husky": "^8.0.1",
         "playwright-chromium": "^1.25.0",
-        "prettier": "^2.7.1",
-        "pretty-quick": "^3.1.3",
+        "prettier": "^2.8.1",
         "style-loader": "^3.3.1",
         "ts-loader": "^9.3.1",
         "typescript": "^4.7.4",
@@ -51,12 +47,6 @@
         "build": "webpack --config=./webpack.prod.js",
         "build:watch": "webpack --watch --config=./webpack.watch.js",
         "playwright:test": "playwright test --config=playwright/playwright.config.ts",
-        "prepare": "cd .. && husky install rekisterointi-ui/.husky",
-        "lint": "eslint --ext .ts,.tsx ."
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app"
-        ]
+        "lint": "npx prettier --write src/ playwright/"
     }
 }
