--- a/organisaatio-service/build.gradle
+++ b/organisaatio-service/build.gradle
@@ -48,12 +48,12 @@ dependencies {
     implementation group: 'fi.vm.sade.java-utils', name: 'opintopolku-user-details-service', version: '0.2.0-SNAPSHOT'
     implementation group: 'fi.vm.sade', name: 'auditlogger', version: '8.3.0-SNAPSHOT'
     implementation group: 'org.postgresql', name: 'postgresql'
-    implementation group: 'com.github.kagkarlsson', name: 'db-scheduler-spring-boot-starter', version: '11.7'
+    implementation 'com.github.kagkarlsson:db-scheduler-spring-boot-starter:14.0.0'
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
     implementation group: 'org.flywaydb', name: 'flyway-core'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
 
-    implementation(group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4') {
+    implementation('commons-fileupload:commons-fileupload:1.5') {
         exclude group: 'org.slf4j', module: 'slf4j-api'
         exclude group: 'org.slf4j', module: 'slf4j-log4j12'
         exclude group: 'org.slf4j', module: 'log4j'
