--- a/organisaatio-ui/package.json
+++ b/organisaatio-ui/package.json
@@ -30,7 +30,7 @@
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.8.4",
         "react-notifications-component": "^3.3.3",
-        "react-router-dom": "5.2.0",
+        "react-router-dom": "^6",
         "react-select": "^5.8.0",
         "react-table": "^7.8.0",
         "react-window": "^1.8.10",
