--- a/organisaatio-ui/package.json
+++ b/organisaatio-ui/package.json
@@ -36,7 +36,7 @@
         "react-window": "^1.8.10",
         "reactjs-popup": "^2.0.5",
         "styled-components": "5.1.1",
-        "universal-cookie": "^7.2.2"
+        "universal-cookie": "4.0.4"
     },
     "devDependencies": {
         "@types/joi-phone-number": "^5.0.6",
@@ -55,7 +55,7 @@
         "copy-webpack-plugin": "^12.0.2",
         "css-loader": "^6.11.0",
         "cypress": "^13.9.0",
-        "eslint": "^8.57.1",
+        "eslint": "^8.57.0",
         "eslint-config-prettier": "^8.10.0",
         "eslint-plugin-cypress": "^3.2.0",
         "eslint-plugin-jsx-a11y": "^6.8.0",
@@ -73,9 +73,9 @@
         "tsx": "^4.10.1",
         "typescript": "5.3.*",
         "wait-on": "^7.2.0",
-        "webpack": "^5.97.1",
-        "webpack-cli": "^6.0.1",
-        "webpack-dev-server": "^5.2.0",
+        "webpack": "^5.91.0",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^5.0.4",
         "webpack-manifest-plugin": "^5.0.0"
     },
     "scripts": {
