--- a/organisaatio-ui/package.json
+++ b/organisaatio-ui/package.json
@@ -35,7 +35,7 @@
         "react-window": "^1.8.10",
         "reactjs-popup": "^2.0.5",
         "styled-components": "5.1.1",
-        "universal-cookie": "4.0.4"
+        "universal-cookie": "^7.2.2"
     },
     "devDependencies": {
         "@types/joi-phone-number": "^5.0.6",
