OPHYK-874 upgrade dependencies to fix several vulnerabilities

--- a/mock-api/package.json
+++ b/mock-api/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "mock-api",
-  "version": "1.0.0",
-  "description": "Mock API for local use and Travis builds",
-  "main": "app.js",
-  "scripts": {
-    "mock-api": "node ./src/app.js"
-  },
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "connect-api-mocker": "^1.10.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.3",
-    "morgan": "^1.10.0",
-    "prettier": "^2.4.1",
-    "express-xml-bodyparser": "^0.3.0",
-    "morgan-body": "^2.6.6"
-  }
+    "name": "mock-api",
+    "version": "1.0.0",
+    "description": "Mock API for local use and Travis builds",
+    "main": "app.js",
+    "scripts": {
+        "mock-api": "node ./src/app.js"
+    },
+    "dependencies": {
+        "body-parser": "1.20.4",
+        "connect-api-mocker": "1.11.0",
+        "cors": "2.8.5",
+        "express": "4.22.1",
+        "morgan": "1.10.1",
+        "morgan-body": "2.6.9",
+        "prettier": "2.8.8",
+        "express-xml-bodyparser": "0.4.1"
+    }
 }
