--- a/rekisterointi/mock-api/package.json
+++ b/rekisterointi/mock-api/package.json
@@ -6,10 +6,10 @@
     "start": "node ./src/app.js"
   },
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "morgan": "^1.10.0",
-    "morgan-body": "^2.6.9"
+    "body-parser": "1.20.4",
+    "cors": "2.8.5",
+    "express": "4.22.1",
+    "morgan": "1.10.1",
+    "morgan-body": "2.6.9"
   }
 }
